# Aoe2DESpecChat

./: .gitignore  .~lock.ReplayFileFormatFindings.ods#  README.md  ReplayFileFormatFindings.ods  testStuff.ps1
Mod/SpecChat/: info.json
ReadFromReplay/: mainRP.ps1
Scripts/: spec_chat_caster.ps1  spec_chat_caster_gui.ps1  spec_chat_common.ps1  spec_chat_player.ps1  start_spec_chat_caster.ps1  start_spec_chat_caster_gui.ps1  start_spec_chat_player.ps1
Server/: .main.cpp.swp  CMakeLists.txt  main.cpp  main.cpp.save  main.cpp.save.1  startAndLog.sh
SpecChat/: currentChat.txt  spec_chat_caster.ps1  spec_chat_caster_gui.ps1  spec_chat_common.ps1  spec_chat_player.ps1
Starters/: start_spec_chat_caster.ps1  start_spec_chat_caster_gui.ps1  start_spec_chat_player.ps1
Temp/: testStuff.ps1
TestSavefiles/GetPlayerNames/: DeflateOnlyFile.ps1  GetNumbersAndNames.ps1
TestSavefiles/GetPlayerNames/Replay/: multiple.aoe2record  multipleBots.aoe2record  multipleDifferentBots.aoe2record
TestSavefiles/VulpesVSAI/: Conclusion.txt  vsAI_Aztecs_0.aoe2record  vsAI_Vikings.aoe2record
TestSavefiles/VulpesVSAI_TryDeflate/: vsAI_Aztecs_1.aoe2record  vsAI_Vikings_edited.aoe2record
TestSavefiles/VulpesVSAi_Specated/: FinishedSpectator.aoe2record  OngoingSpectator.aoe2record
TestSavefiles/VulpesVSAi_Specated/Deflate/: DeflateOnlyFile.ps1  MultiplePlayers.aoe2record  OngoingPlayer_OnlyVerFile  OngoingPlayer_OnlyVerFile.bak  OngoingPlayer_OnlyVerFile_NoHeader  OngoingPlayer_edited.aoe2record  (+3 more)
TestSavefiles/VulpesVSAi_Specated_BU/: FinishedPlayer.aoe2record  OngoingPlayer.aoe2record
(+1 files in other folders)
